log/build_2022-09-03_18-06-17/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 163
    node vel = rclpy.create_node('velocidadepub')
         ^
SyntaxError: invalid syntax

